implemented Service Classes with crud operations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
 spring.application.name=cabbooking
+
+logging.level.=DEBUG
+spring.security.user.name=admin
+spring.security.user.password=admin123
+# ==============================
+# = DATABASE CONFIGURATION     =
+# ==============================
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/piggy_back_db
+spring.datasource.username=piggy-user
+spring.datasource.password=piggypass
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ==============================
+# = JPA / HIBERNATE SETTINGS   =
+# ==============================
+# Use "create", "validate", or "none" in prod
+# Print SQL statements to console
+spring.jpa.hibernate.ddl-auto=update     
+spring.jpa.show-sql=true                 
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ==============================
+# = SERVER SETTINGS (Optional) =
+# ==============================
+# Default port
+server.port=8080                       
